Title & Author Information

--- a/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
+++ b/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
@@ -29,7 +29,9 @@
 \usepackage{setspace} % Double Spacing
 \usepackage{lmodern} % Font-size setting
 
-\title{Formatting Instructions For NeurIPS 2019}
+\title{Generating Model to Predict the Spread of Volcanic Fallout Ash Spread%
+  by using Image-to-Image Translation of Weather Map%
+  }
 
 % The \author macro works with any number of authors. There are two commands
 % used to separate the names and addresses of multiple authors: \And and \AND.
@@ -39,35 +41,19 @@
 % authors names on the first line, and the last on the second line, try using
 % \AND instead of \And before the third author name.
 
-\author{%
-  David S.~Hippocampus\thanks{Use footnote for providing further information
-    about author (webpage, alternative address)---\emph{not} for acknowledging
-    funding agencies.} \\
-  Department of Computer Science\\
-  Cranberry-Lemon University\\
-  Pittsburgh, PA 15213 \\
-  \texttt{hippo@cs.cranberry-lemon.edu} \\
-  % examples of more authors
-  % \And
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
-  % \AND
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
-  % \And
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
-  % \And
-  % Coauthor \\
-  % Affiliation \\
-  % Address \\
-  % \texttt{email} \\
+\author{
+  Hyecheol Jang \\
+  Department of Computer Sciences\\
+  University of Wisconsin–Madison\\
+  Madison, WI 53706 \\
+  \texttt{hyecheol.jang@wisc.edu} \\
+
+  \And
+  Kangwook Lee\thanks{Faculty Advisor} \\
+  Department of Electrical and Computer Engineering \\
+  University of Wisconsin–Madison\\
+  Madison, WI 53706 \\
+  \texttt{kangwook.lee@wisc.edu} \\
 }
 
 \begin{document}
