--- a/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
+++ b/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
@@ -9,18 +9,19 @@
 
 % to compile a preprint version, e.g., for submission to arXiv, add add the
 % [preprint] option:
-     \usepackage[preprint]{neurips_2019}
+%     \usepackage[preprint]{neurips_2019}
 
 % to compile a camera-ready version, add the [final] option, e.g.:
 %     \usepackage[final]{neurips_2019}
 
 % to avoid loading the natbib package, add option nonatbib:
-%     \usepackage[nonatbib]{neurips_2019}
+\usepackage[nonatbib, preprint]{neurips_2019}
 
 \usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
 \usepackage{hyperref}       % hyperlinks
 \usepackage{url}            % simple URL typesetting
+\def\UrlBreaks{\do\/\do-}   % To properly break the long url
 \usepackage{booktabs}       % professional-quality tables
 \usepackage{amsfonts}       % blackboard math symbols
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
@@ -28,6 +29,8 @@
 
 \usepackage{setspace} % Double Spacing
 \usepackage{lmodern} % Font-size setting
+
+\usepackage[numbers,round]{natbib}
 
 \title{Generating Model to Predict the Spread of Volcanic Fallout Ash Spread%
   by using Image-to-Image Translation of Weather Map%
@@ -58,6 +61,8 @@
 
 \begin{document}
 
+
+
 \maketitle
 
 \begin{abstract}
@@ -71,325 +76,96 @@
 \end{abstract}
 
 \begin{doublespacing}
-\section{Submission of papers to NeurIPS 2019}
+\section{Introduction}
 \fontsize{11pt}{11pt} \selectfont {
-  NeurIPS requires electronic submissions.  The electronic submission site is
-  \begin{center}
-    \url{https://cmt.research.microsoft.com/NeurIPS2019/}
-  \end{center}
+  The volcanic eruption is one of the most severe natural disasters which occasionally happens.
+  However, compares to the other disasters which can be predicted, like typhoons and storms,
+  predicting exact time and scale of volcanic eruption considers as a very difficult tasks
+  which might never be accurate, according to 
+  Einarsson~\citep[as cited in][para 7 \& 30]{fountain_2015}.
+  Though there exist various ways that volcanic eruption causing countless casualties and massive 
+  economical loss, according to Yun~\citet[p. 274]{Yun_2013}, the fallout ash, focus of this 
+  research, considers as one of the most significant by-products making deadly effects.
+  Including the respiratory damage of lives, threatening the safety and reliability of air 
+  transportation, and collapse of structures caused by sedimentation of the ash, the fallout ash 
+  causing various impairments on wide range of areas~\citep[p. 274-275]{Yun_2013}.
+  
+  To mitigate the hazardous effects caused by the fallout ash, it is important to properly predict 
+  the direction of ash spread and evacuate or alert citizens reside through the path of the ash 
+  dispersion. Historically, by using Eulerian or Lagrangian approach~\citet[p. 3-4]{Bonadonna2012}, 
+  the scientists are tried to make Volcanic Ash and Dispersion/Tracking Model (VATDM). These models 
+  usually focus on the predicting the pathway of fallout ash dispersion and the amount of deposited 
+  ash while accepting limited variables~\citep[p. 276]{Yun_2013}.
 
-  Please read the instructions below carefully and follow them faithfully.
+  % TODO Oringinality
+  % TODO Research Goal
 }
 
-\subsection{Style}
-Papers to be submitted to NeurIPS 2019 must be prepared according to the
-instructions presented here. Papers may only be up to eight pages long,
-including figures. Additional pages \emph{containing only acknowledgments and/or
-  cited references} are allowed. Papers that exceed eight pages of content
-(ignoring references) will not be reviewed, or in any other way considered for
-presentation at the conference.
+\section{Methods} % TODO Citation
+\fontsize{11pt}{11pt} \selectfont {
+  \paragraph{Data Collection}
+  To achieve our goal, making generator which predict the possible area of ash spread with respect 
+  to the given pair of weather maps, we first need to collect input and output data pairs. In order 
+  to collect these, for the input image, we will download those from “Meteorological Data Open 
+  Portal” operated by Korea Meteorological Administration (KMA). To get the output data that will be
+  paired with the weather maps, we will go through the traditional procedure with either FALL3D, or 
+  Puff-UAF model. Those models have their own strengths and shortness, and these will be summarized 
+  on \textbf{Appendix A}.
+  
+  The simulation parameters except for the weather data – plume height, number of particles to be 
+  predicted, and the mountain that has been erupted) will be set manually. To represent various 
+  eruption cases, for each mountain to be used as sample, we will run the simulation with the 
+  constants representing Volcanic Explosivity Index (VEI) 3 (Moderate Eruption), VEI 5 (Large 
+  Eruption), and VEI 7 (Very Large Eruption). The remaining, but the most important, parameter for 
+  the simulation model, weather prediction data, will be obtained by the same location where we 
+  found the weather maps: download prediction made by RDAPS(regional data assimilation and 
+  prediction system). These datasets are extremely huge: one day of weather data takes 1.32 
+  GigaBytes, and we are thinking of getting at least 5 years of data for both training and testing 
+  sets. We need to find a reliable storage to save all the weather data, weather maps, and output 
+  images.
 
-The margins in 2019 are the same as since 2007, which allow for $\sim$$15\%$
-more words in the paper compared to earlier years.
+  % TODO Learning a Model
+  % TODO Analysis Plan - Experiment
+}
 
-Authors are required to use the NeurIPS \LaTeX{} style files obtainable at the
-NeurIPS website as indicated below. Please make sure you use the current files
-and not previous versions. Tweaking the style files may be grounds for
-rejection.
+\section{Timeline} % TODO review
+\fontsize{11pt}{11pt} \selectfont {
+  The first thing we should do is to get the input. As there is no opened API to get the weather 
+  maps and data from KMA, but they provide an interactive website to download the data, it might 
+  take some time to get all data manually. Moreover, the calculation time for that simulation was 
+  not ignorable, according to previous experiment (takes approximately one hour to get one output 
+  with the laptop having Intel’s i5-3320M CPU). Considering the factor that we have access to better
+  computing power than the previous test, we are expecting to finish data collection within two 
+  months after project initiated.
 
-\subsection{Retrieval of style files}
+  The next step is to train the generator with given input-output pair. To fit conditional GAN based
+  model and to verify the result with various test cases, we are expecting to take two additional 
+  months here. For the last one month of this research, we will write a report and posters.
+}
 
-The style files for NeurIPS and other conference information are available on
-the World Wide Web at
-\begin{center}
-  \url{http://www.neurips.cc/}
-\end{center}
-The file \verb+neurips_2019.pdf+ contains these instructions and illustrates the
-various formatting requirements your NeurIPS paper must satisfy.
+\section{Conclusion and Future Direction}
+\fontsize{11pt}{11pt} \selectfont {
+  We are expected to have faster way to predict possible pathway and area of volcanic fallout ash 
+  spread by using simpler and lighter input, weather maps, compare to the weather dataset predicted 
+  by RDAPS. Not only reduce the computing time to predict the spread, the model aims to reproduce as
+  same result as possible compares to the original training result.
 
-The only supported style file for NeurIPS 2019 is \verb+neurips_2019.sty+,
-rewritten for \LaTeXe{}.  \textbf{Previous style files for \LaTeX{} 2.09,
-  Microsoft Word, and RTF are no longer supported!}
+  Because of the weather maps’ style is different with the agencies that produce the map (NOAA’s way
+  of making the map and KMA’s way of making the map is different), our model was not focused to 
+  produce an output from the maps that has been publicized by different agencies. Moreover, because 
+  of the limitation of dataset, we are only able to train and test on the area near Korean 
+  Peninsula; the models could not be verified on the different regional settings.
+  % TODO: Figure?
 
-The \LaTeX{} style file contains three optional arguments: \verb+final+, which
-creates a camera-ready copy, \verb+preprint+, which creates a preprint for
-submission to, e.g., arXiv, and \verb+nonatbib+, which will not load the
-\verb+natbib+ package for you in case of package clash.
-
-\paragraph{Preprint option}
-If you wish to post a preprint of your work online, e.g., on arXiv, using the
-NeurIPS style, please use the \verb+preprint+ option. This will create a
-nonanonymized version of your work with the text ``Preprint. Work in progress.''
-in the footer. This version may be distributed as you see fit. Please \textbf{do
-  not} use the \verb+final+ option, which should \textbf{only} be used for
-papers accepted to NeurIPS.
-
-At submission time, please omit the \verb+final+ and \verb+preprint+
-options. This will anonymize your submission and add line numbers to aid
-review. Please do \emph{not} refer to these line numbers in your paper as they
-will be removed during generation of camera-ready copies.
-
-The file \verb+neurips_2019.tex+ may be used as a ``shell'' for writing your
-paper. All you have to do is replace the author, title, abstract, and text of
-the paper with your own.
-
-The formatting instructions contained in these style files are summarized in
-Sections \ref{gen_inst}, \ref{headings}, and \ref{others} below.
-
-\section{General formatting instructions}
-\label{gen_inst}
-
-The text must be confined within a rectangle 5.5~inches (33~picas) wide and
-9~inches (54~picas) long. The left margin is 1.5~inch (9~picas).  Use 10~point
-type with a vertical spacing (leading) of 11~points.  Times New Roman is the
-preferred typeface throughout, and will be selected for you by default.
-Paragraphs are separated by \nicefrac{1}{2}~line space (5.5 points), with no
-indentation.
-
-The paper title should be 17~point, initial caps/lower case, bold, centered
-between two horizontal rules. The top rule should be 4~points thick and the
-bottom rule should be 1~point thick. Allow \nicefrac{1}{4}~inch space above and
-below the title to rules. All pages should start at 1~inch (6~picas) from the
-top of the page.
-
-For the final version, authors' names are set in boldface, and each name is
-centered above the corresponding address. The lead author's name is to be listed
-first (left-most), and the co-authors' names (if different address) are set to
-follow. If there is only one co-author, list both author and co-author side by
-side.
-
-Please pay special attention to the instructions in Section \ref{others}
-regarding figures, tables, acknowledgments, and references.
-
-\section{Headings: first level}
-\label{headings}
-
-All headings should be lower case (except for first word and proper nouns),
-flush left, and bold.
-
-First-level headings should be in 12-point type.
-
-\subsection{Headings: second level}
-
-Second-level headings should be in 10-point type.
-
-\subsubsection{Headings: third level}
-
-Third-level headings should be in 10-point type.
-
-\paragraph{Paragraphs}
-
-There is also a \verb+\paragraph+ command available, which sets the heading in
-bold, flush left, and inline with the text, with the heading followed by 1\,em
-of space.
-
-\section{Citations, figures, tables, references}
-\label{others}
-
-These instructions apply to everyone.
-
-\subsection{Citations within the text}
-
-The \verb+natbib+ package will be loaded for you by default.  Citations may be
-author/year or numeric, as long as you maintain internal consistency.  As to the
-format of the references themselves, any style is acceptable as long as it is
-used consistently.
-
-The documentation for \verb+natbib+ may be found at
-\begin{center}
-  \url{http://mirrors.ctan.org/macros/latex/contrib/natbib/natnotes.pdf}
-\end{center}
-Of note is the command \verb+\citet+, which produces citations appropriate for
-use in inline text.  For example,
-\begin{verbatim}
-   \citet{hasselmo} investigated\dots
-\end{verbatim}
-produces
-\begin{quote}
-  Hasselmo, et al.\ (1995) investigated\dots
-\end{quote}
-
-If you wish to load the \verb+natbib+ package with options, you may add the
-following before loading the \verb+neurips_2019+ package:
-\begin{verbatim}
-   \PassOptionsToPackage{options}{natbib}
-\end{verbatim}
-
-If \verb+natbib+ clashes with another package you load, you can add the optional
-argument \verb+nonatbib+ when loading the style file:
-\begin{verbatim}
-   \usepackage[nonatbib]{neurips_2019}
-\end{verbatim}
-
-As submission is double blind, refer to your own published work in the third
-person. That is, use ``In the previous work of Jones et al.\ [4],'' not ``In our
-previous work [4].'' If you cite your other papers that are not widely available
-(e.g., a journal paper under review), use anonymous author names in the
-citation, e.g., an author of the form ``A.\ Anonymous.''
-
-\subsection{Footnotes}
-
-Footnotes should be used sparingly.  If you do require a footnote, indicate
-footnotes with a number\footnote{Sample of the first footnote.} in the
-text. Place the footnotes at the bottom of the page on which they appear.
-Precede the footnote with a horizontal rule of 2~inches (12~picas).
-
-Note that footnotes are properly typeset \emph{after} punctuation
-marks.\footnote{As in this example.}
-
-\subsection{Figures}
-
-\begin{figure}
-  \centering
-  \fbox{\rule[-.5cm]{0cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
-  \caption{Sample figure caption.}
-\end{figure}
-
-All artwork must be neat, clean, and legible. Lines should be dark enough for
-purposes of reproduction. The figure number and caption always appear after the
-figure. Place one line space before the figure caption and one line space after
-the figure. The figure caption should be lower case (except for first word and
-proper nouns); figures are numbered consecutively.
-
-You may use color figures.  However, it is best for the figure captions and the
-paper body to be legible if the paper is printed in either black/white or in
-color.
-
-\subsection{Tables}
-
-All tables must be centered, neat, clean and legible.  The table number and
-title always appear before the table.  See Table~\ref{sample-table}.
-
-Place one line space before the table title, one line space after the
-table title, and one line space after the table. The table title must
-be lower case (except for first word and proper nouns); tables are
-numbered consecutively.
-
-Note that publication-quality tables \emph{do not contain vertical rules.} We
-strongly suggest the use of the \verb+booktabs+ package, which allows for
-typesetting high-quality, professional tables:
-\begin{center}
-  \url{https://www.ctan.org/pkg/booktabs}
-\end{center}
-This package was used to typeset Table~\ref{sample-table}.
-
-\begin{table}
-  \caption{Sample table title}
-  \label{sample-table}
-  \centering
-  \begin{tabular}{lll}
-    \toprule
-    \multicolumn{2}{c}{Part}                   \\
-    \cmidrule(r){1-2}
-    Name     & Description     & Size ($\mu$m) \\
-    \midrule
-    Dendrite & Input terminal  & $\sim$100     \\
-    Axon     & Output terminal & $\sim$10      \\
-    Soma     & Cell body       & up to $10^6$  \\
-    \bottomrule
-  \end{tabular}
-\end{table}
-
-\section{Final instructions}
-
-Do not change any aspects of the formatting parameters in the style files.  In
-particular, do not modify the width or length of the rectangle the text should
-fit into, and do not change font sizes (except perhaps in the
-\textbf{References} section; see below). Please note that pages should be
-numbered.
-
-\section{Preparing PDF files}
-
-Please prepare submission files with paper size ``US Letter,'' and not, for
-example, ``A4.''
-
-Fonts were the main cause of problems in the past years. Your PDF file must only
-contain Type 1 or Embedded TrueType fonts. Here are a few instructions to
-achieve this.
-
-\begin{itemize}
-
-\item You should directly generate PDF files using \verb+pdflatex+.
-
-\item You can check which fonts a PDF files uses.  In Acrobat Reader, select the
-  menu Files$>$Document Properties$>$Fonts and select Show All Fonts. You can
-  also use the program \verb+pdffonts+ which comes with \verb+xpdf+ and is
-  available out-of-the-box on most Linux machines.
-
-\item The IEEE has recommendations for generating PDF files whose fonts are also
-  acceptable for NeurIPS. Please see
-  \url{http://www.emfield.org/icuwb2010/downloads/IEEE-PDF-SpecV32.pdf}
-
-\item \verb+xfig+ "patterned" shapes are implemented with bitmap fonts.  Use
-  "solid" shapes instead.
-
-\item The \verb+\bbold+ package almost always uses bitmap fonts.  You should use
-  the equivalent AMS Fonts:
-\begin{verbatim}
-   \usepackage{amsfonts}
-\end{verbatim}
-followed by, e.g., \verb+\mathbb{R}+, \verb+\mathbb{N}+, or \verb+\mathbb{C}+
-for $\mathbb{R}$, $\mathbb{N}$ or $\mathbb{C}$.  You can also use the following
-workaround for reals, natural and complex:
-\begin{verbatim}
-   \newcommand{\RR}{I\!\!R} %real numbers
-   \newcommand{\Nat}{I\!\!N} %natural numbers
-   \newcommand{\CC}{I\!\!\!\!C} %complex numbers
-\end{verbatim}
-Note that \verb+amsfonts+ is automatically loaded by the \verb+amssymb+ package.
-
-\end{itemize}
-
-If your file contains type 3 fonts or non embedded TrueType fonts, we will ask
-you to fix it.
-
-\subsection{Margins in \LaTeX{}}
-
-Most of the margin problems come from figures positioned by hand using
-\verb+\special+ or other commands. We suggest using the command
-\verb+\includegraphics+ from the \verb+graphicx+ package. Always specify the
-figure width as a multiple of the line width as in the example below:
-\begin{verbatim}
-   \usepackage[pdftex]{graphicx} ...
-   \includegraphics[width=0.8\linewidth]{myfile.pdf}
-\end{verbatim}
-See Section 4.4 in the graphics bundle documentation
-(\url{http://mirrors.ctan.org/macros/latex/required/graphics/grfguide.pdf})
-
-A number of width problems arise when \LaTeX{} cannot properly hyphenate a
-line. Please give LaTeX hyphenation hints using the \verb+\-+ command when
-necessary.
-
-\subsubsection*{Acknowledgments}
-
-Use unnumbered third level headings for the acknowledgments. All acknowledgments
-go at the end of the paper. Do not include acknowledgments in the anonymized
-submission, only in the final paper.
+  % TODO Future Direction
+}
 
 \end{doublespacing}
 
-\section*{References}
-
-References follow the acknowledgments. Use unnumbered first-level heading for
-the references. Any choice of citation style is acceptable as long as you are
-consistent. It is permissible to reduce the font size to \verb+small+ (9 point)
-when listing the references. {\bf Remember that you can use more than eight
-  pages as long as the additional pages contain \emph{only} cited references.}
 \medskip
 
-\small
+\bibliography{reference}
+\bibliographystyle{apalike}
 
-[1] Alexander, J.A.\ \& Mozer, M.C.\ (1995) Template-based algorithms for
-connectionist rule extraction. In G.\ Tesauro, D.S.\ Touretzky and T.K.\ Leen
-(eds.), {\it Advances in Neural Information Processing Systems 7},
-pp.\ 609--616. Cambridge, MA: MIT Press.
-
-[2] Bower, J.M.\ \& Beeman, D.\ (1995) {\it The Book of GENESIS: Exploring
-  Realistic Neural Models with the GEneral NEural SImulation System.}  New York:
-TELOS/Springer--Verlag.
-
-[3] Hasselmo, M.E., Schnell, E.\ \& Barkai, E.\ (1995) Dynamics of learning and
-recall at excitatory recurrent synapses and cholinergic modulation in rat
-hippocampal region CA3. {\it Journal of Neuroscience} {\bf 15}(7):5249-5262.
 
 \end{document}
