--- a/reference.bib
+++ b/reference.bib
@@ -19,6 +19,11 @@
   note  = {Online; The New York Times; \url{https://www.nytimes.com/2015/01/06/science/predicting-what-a-volcano-may-or-may-not-do-is-as-tricky-as-it-is-crucial-as-iceland-well-knows.html} (last accessed on 02/12/17)},
 }
 
+@misc{MDOP,
+  title = {Meteorological Data Open Portal},
+  note = {Online Databse; Korea Meteorological Administration (KMA); \url{https://data.kma.go.kr/}}
+}
+
 @Article{Bonadonna2012,
   author="Bonadonna, Costanza
           and Folch, Arnau
@@ -38,3 +43,117 @@
   url="https://doi.org/10.1007/s00445-011-0508-6"
 }
 
+@article{Newhall1982,
+  author = {Newhall, Christopher G. and Self, Stephen},
+  title = {The volcanic explosivity index (VEI) an estimate of explosive magnitude for historical volcanism},
+  journal = {Journal of Geophysical Research: Oceans},
+  volume = {87},
+  number = {C2},
+  pages = {1231-1238},
+  doi = {10.1029/JC087iC02p01231},
+  url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/JC087iC02p01231},
+  eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/JC087iC02p01231},
+  abstract = {Knowledge of the frequencies of highly explosive, moderately explosive, and nonexplosive eruptions would be useful in a variety of volcano studies. Historical records are generally incomplete, however, and contain very little quantitative data from which explosive magnitude can be estimated. Only the largest eruptions have a complete record back to the early 19th Century; other important explosive events went unrecorded prior to about 1960. Only a handful of the very biggest eruptions are represented in the geologic record, so it will be impossible to augment historical records post facto. A composite estimate of the magnitude of past explosive eruptions, termed the Volcanic Explosivity Index (VEI), is proposed as a semiquantitative compromise between poor data and the need in various disciplines to evaluate the record of past volcanism. The VEI has been assigned to over 8000 historic and prehistoric eruptions, and a complete list is available in a companion document.},
+  year = {1982}
+}
+
+@ARTICLE{Tanaka2022,
+       author = {{Tanaka}, H.~L. and {Yamamoto}, K.},
+        title = "{Numerical simulation of volcanic plume dispersal from Usu volcano in Japan on 31 March 2000 using PUFF model}",
+      journal = {Earth, Planets, and Space},
+         year = "2002",
+        month = "Jul",
+       volume = {54},
+        pages = {743-752},
+     abstract = "{In this study, a volcanic ash tracking model called ``PUFF'' is applied
+        to the actual eruption of Usu volcano on 31 March 2000 in order
+        to infer the movement of airborne ash clouds for aviation
+        safety. The PUFF model was developed and operated by the Alaska
+        Volcano Observatory since the eruption of Redoubt volcano in
+        1989. The performance of the PUFF model is examined in this
+        study based on the ground truth of the observed distribution of
+        tephra on the ground. According to the model simulation, the ash
+        plume erupted from Usu volcano first moved eastward for the New
+        Chitose International Airport. As the upper air westerly wind
+        gradually shifted to southerly wind, the ash front traveled from
+        Chitose to Nemuro while the subsequent eruption plume directed
+        toward the northeast over Sapporo area. The vertical cross
+        sections and 3-D perspective image of the ash clouds are
+        presented as a function of time. The model simulation was
+        justified by the agreement between the modeled and observed
+        distributions of tephra on the ground. The PUFF model with
+        accurate wind information can simulate the location and the
+        direction of the moving airborne ash cloud on a realtime basis,
+        which may provide crucial information to aviation industry. <P
+        />}",
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002EP&S...54..743T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Searcy1998,
+  title = "PUFF: A high-resolution volcanic ash tracking model",
+  journal = "Journal of Volcanology and Geothermal Research",
+  volume = "80",
+  number = "1",
+  pages = "1 - 16",
+  year = "1998",
+  issn = "0377-0273",
+  doi = "https://doi.org/10.1016/S0377-0273(97)00037-1",
+  url = "http://www.sciencedirect.com/science/article/pii/S0377027397000371",
+  author = "Craig Searcy and Ken Dean and William Stringer",
+  keywords = "volcano, ash cloud, tracking model, eruptions, eruption cloud",
+  abstract = "This paper presents a volcanic ash tracking model referred to as PUFF. The model was developed to simulate the movement of airborne ash in near real-time following an eruption for the purposes of hazard warning. The model tracks particles through a Lagrangian formulation of advection, fallout and turbulent diffusion using a random-walk technique. Three recent eruption events are simulated using archived data. AVHRR images from these events are used for comparison and to validate model results."
+}
+
+@article{Webley2009,
+  title = "Improved prediction and tracking of volcanic ash clouds",
+  journal = "Journal of Volcanology and Geothermal Research",
+  volume = "186",
+  number = "1",
+  pages = "1 - 9",
+  year = "2009",
+  note = "Improved Prediction and Tracking of Volcanic Ash Clouds",
+  issn = "0377-0273",
+  doi = "https://doi.org/10.1016/j.jvolgeores.2008.10.022",
+  url = "http://www.sciencedirect.com/science/article/pii/S0377027308005660",
+  author = "Peter Webley and Larry Mastin",
+  keywords = "volcanic ash clouds, eruption source parameters, hazard assessment",
+  abstract = "During the past 30 years, more than 100 airplanes have inadvertently flown through clouds of volcanic ash from erupting volcanoes. Such encounters have caused millions of dollars in damage to the aircraft and have endangered the lives of tens of thousands of passengers. In a few severe cases, total engine failure resulted when ash was ingested into turbines and coating turbine blades. These incidents have prompted the establishment of cooperative efforts by the International Civil Aviation Organization and the volcanological community to provide rapid notification of eruptive activity, and to monitor and forecast the trajectories of ash clouds so that they can be avoided by air traffic. Ash-cloud properties such as plume height, ash concentration, and three-dimensional ash distribution have been monitored through non-conventional remote sensing techniques that are under active development. Forecasting the trajectories of ash clouds has required the development of volcanic ash transport and dispersion models that can calculate the path of an ash cloud over the scale of a continent or a hemisphere. Volcanological inputs to these models, such as plume height, mass eruption rate, eruption duration, ash distribution with altitude, and grain-size distribution, must be assigned in real time during an event, often with limited observations. Databases and protocols are currently being developed that allow for rapid assignment of such source parameters. In this paper, we summarize how an interdisciplinary working group on eruption source parameters has been instigating research to improve upon the current understanding of volcanic ash cloud characterization and predictions. Improved predictions of ash cloud movement and air fall will aid in making better hazard assessments for aviation and for public health and air quality."
+}
+
+@article{Sorokin2016,
+  author = {Sorokin, Aleksei and Girina, Olga and Korolev, Sergey and Romanova, I. and V.Yu, Efremov and S., Malkovskii and A., Verkhoturov and I., Balashov},
+  year = {2016},
+  month = {06},
+  pages = {730-733},
+  title = {The system of computer modeling of ash cloud propagation from Kamchatka volcanoes},
+  volume = {II},
+  journal = {2016 6th International Workshop on Computer Science and Engineering (WCSE 2016)}
+}
+
+@misc{isola2016imagetoimage,
+    title={Image-to-Image Translation with Conditional Adversarial Networks},
+    author={Phillip Isola and Jun-Yan Zhu and Tinghui Zhou and Alexei A. Efros},
+    year={2016},
+    eprint={1611.07004},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
+
+@misc{ronneberger2015unet,
+    title={U-Net: Convolutional Networks for Biomedical Image Segmentation},
+    author={Olaf Ronneberger and Philipp Fischer and Thomas Brox},
+    year={2015},
+    eprint={1505.04597},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
+
+@misc{james2018simtoreal,
+    title={Sim-to-Real via Sim-to-Sim: Data-efficient Robotic Grasping via Randomized-to-Canonical Adaptation Networks},
+    author={Stephen James and Paul Wohlhart and Mrinal Kalakrishnan and Dmitry Kalashnikov and Alex Irpan and Julian Ibarz and Sergey Levine and Raia Hadsell and Konstantinos Bousmalis},
+    year={2018},
+    eprint={1812.07252},
+    archivePrefix={arXiv},
+    primaryClass={cs.RO}
+}
