--- a/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
+++ b/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
@@ -32,8 +32,8 @@
 
 \usepackage[numbers,round]{natbib}
 
-\title{Generating Model to Predict the Spread of Volcanic Fallout Ash Spread%
-  by using Image-to-Image Translation of Weather Map%
+\title{Generating Models to Predict the Spread of Volcanic Fallout Ash%
+  by using conditional Generative Adversarial Network%
   }
 
 % The \author macro works with any number of authors. There are two commands
@@ -79,15 +79,16 @@
 \section{Introduction} % TODO Review Requested
 \fontsize{11pt}{11pt} \selectfont {
   The volcanic eruption is one of the most severe natural disasters which occasionally happens.
-  However, compares to the other disasters which can be predicted, like typhoons and storms,
-  predicting the exact time and scale of volcanic eruption considers as a very difficult task which 
-  might never be accurate, according to Einarsson~\citep[as cited in][para.7 \& 30]{fountain_2015}. 
-  Though there exist various ways that volcanic eruption causing countless casualties and massive 
+  However, comparing to the other disasters which can be predicted, like typhoons and storms,
+  predicting the exact time and scale of volcanic eruption considered as a very difficult task, 
+  which might never be accurate, according to 
+  Einarsson~\citep[as cited in][para.7 \& 30]{fountain_2015}. 
+  Though there exist various ways that volcanic eruption to cause countless casualties and massive 
   economic loss, according to~\citet[p.274]{Yun_2013}, the fallout ash, the focus of this 
-  research, considers as one of the most significant by-products making deadly effects.
+  research, considered as one of the most significant by-products making deadly effects.
   Including the respiratory damage of lives, threatening the safety and reliability of air 
   transportation, and the collapse of structures caused by sedimentation of the ash, the fallout ash
-  causing various impairments in a wide range of areas~\citep[p.274-275]{Yun_2013}.
+  causes various impairments in a wide range of areas~\citep[p.274-275]{Yun_2013}.
   
   To mitigate the hazardous effects caused by the fallout ash, it is important to properly predict 
   the direction of ash spread and evacuate or alert citizens who reside through the path of the ash 
